# voxflat

./: .gitignore  LICENSE  README.md  meson.build  meson.options  voxflat.pc.in
.github/workflows/: doxygen.yml  run-tests.yml
doc/: Doxyfile.in  mainpage.md  meson.build
include/: meson.build  voxflat.h
src/: meson.build  voxflat.c  voxflat.def
tests/: common.h  meson.build  test_calculate_bounds.c  test_count_voxels.c  test_open_error.c  test_open_memory.c  test_read_unexpected_eof.c
tests/data/: minimal.qef  minimal.txt  minimal.vox  transforms.qef  transforms.txt  transforms.vox
tools/: meson.build  vox2qef.c  vox2txt.c
